Replaced private bot token with placeholder.

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN = ODYwNTI5OTkwODIzNDQ0NTQy.YN8lAQ.fa-EXapa8XgqF_3gn7wkEWJ33IE
+DISCORD_TOKEN = "PRIVATE DISCORD BOT TOKEN GOES HERE"
 PREFIX = ;
